---------------------------------------------------------------------------------------------------
Version: 2.8.1
Date: ????
  Bugfixes:
    - Fixed dropping modules inside a crafting machine.
    - Fixed tile ghosts being left behind when pasting blueprints on space platforms.
  Graphics:
    - Fixed missing label for "All" settings in updated settings entity UI.
---------------------------------------------------------------------------------------------------
Version: 2.8.0
Date: 2025-11-09
  Features:
    - Added support for staged space platforms!
    - Added a new project creation UI.
  Changes:
    - Revised project settings UI.
    - The names of surfaces in projects now match the project/stage name.
    - Map gen settings are now saved and can be shared when exported/imported to string.
  Bugfixes:
    - "Surface properties" (crafting restrictions) are now respected when setting a project to use a planet's map gen.
---------------------------------------------------------------------------------------------------
Version: 2.7.1
Date: 2025-11-02
  Bugfixes
    - Fixed handling of item requests for fuel and nutrients.
    - Fixed several issues relating to bot item requests.
    - Duplicate item requests highlights will no longer appear on some entities.
---------------------------------------------------------------------------------------------------
Version: 2.7.0
Date: 2025-10-29
  Features:
    - Added support for vehicles (cars, tanks, spidertrons).
---------------------------------------------------------------------------------------------------
Version: 2.6.8
Date: 2025-10-27
  Bugfixes:
    - Fixed multiple issues related to handling elevated rails and train signals.
---------------------------------------------------------------------------------------------------
Version: 2.6.7
Date: 2025-10-19
  Bugfixes:
    - Fixed that some entities like electromagnetic plants were not properly mirrored in project editor.